--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ SITECORE_API_HOST=https://xmc-salesengine583b-xmcloudvert26fc-prod2f09.sitecorec
 SITECORE_DEBUG_LOGGER=*
 PORT=3000
 
+JSS_ALLOWED_ORIGINS=https://pages.sitecorecloud.io
